--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
 
 {% block content %}
-    <h1>WHOOOPS we can't find that page</h1>
+    <h1>WHOOOPS!!!! We can't find that page!!e</h1>
 {% endblock %}
