made changes to the base file

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,10 +11,10 @@
         {% if title %}
         <title> {{ title }}</title>
         {% else %}
-        <title>Welcome to News Highlights Application</title>
+        <title>Welcome to News Highlights Website</title>
         {% endif %}
     </head>
-    
+
     <body>
 
         <!-- Content block -->
