made changes to the navbar file

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,11 +12,11 @@
         </div>
         <div class="container">
         <ul class="nav navbar-nav">
-          <li><a href="#b">Business</a></li>
-          <li><a href="#e">Entertainment</a></li>
-          <li><a href="#h">Health</a></li>
-          <li><a href="#s">Sports</a></li>
-          <li><a href="#t">Technology</a></li>
+          <li><a href="#">Business</a></li>
+          <li><a href="#">Entertainment</a></li>
+          <li><a href="#">Health</a></li>
+          <li><a href="#">Sports</a></li>
+          <li><a href="#">Technology</a></li>
     
         </ul>
       </div>
